force-app/main/default/objects/Thread_Message__c/Thread_Message__c.object-meta.xml
<CustomObject>
    <label>Mensagem de uma conversa</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Nome de Mensagem de uma conversa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mensagens de uma conversa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>