force-app/main/default/objects/Thread_Message__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>Conteúdo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>