force-app/main/default/objects/Thread_Message__c/fields/Enviada_em__c.field-meta.xml
<CustomField>
    <fullName>Enviada_em__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data envio</label>
    <type>DateTime</type>
</CustomField>