force-app/main/default/objects/Thread_Message__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <label>Thread</label>
    <referenceTo>Thread__c</referenceTo>
    <relationshipLabel>Mensagens de uma conversa</relationshipLabel>
    <relationshipName>Thread_Message</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>